--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <p>This page displays nothing, everything is run through console.</p>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 </body>
 </html>
