Add score and result divs

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+    <div class="score">
+        Score: Human - 0, Computer - 0
+    </div>
+    <div class="result">
+        Result: 
+    </div>
 </body>
 </html>
