--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript.js"></script>
+    <script defer src="javascript.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div class="buttons">
+    <div class="roundNumber">Round 1</div>
+    <div class="buttonContainer">
+        <div>What is your choice?</div>
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
