--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div class="roundNumber">Round 1</div>
+    <div class="roundNum">Round 1</div>
     <div class="buttonContainer">
         <div>What is your choice?</div>
         <button id="rock">Rock</button>
